fix fab issues on safari

--- a/src/app/auth/components/login/login.component.scss
+++ b/src/app/auth/components/login/login.component.scss
@@ -18,8 +18,8 @@ mat-form-field {
   width: 300px;
   color: #737373;
   font-family: 'Roboto',arial,sans-serif;
-  font-weight: bold;
 }
+
 .google-button-icon {
   margin-right: 16px;
   margin-bottom: 4px;
@@ -37,7 +37,6 @@ mat-form-field {
 
 .email-button-icon {
   margin-right: 16px;
-  margin-bottom: 4px;
 }
 
 .submit-button {
